atmpted to fix spacing between articles

--- a/basepages/CSS/Content_ver1.css
+++ b/basepages/CSS/Content_ver1.css
@@ -1,35 +1,33 @@
 .ContentVER1{
     background-color: rgb(196, 241, 241);
-    padding: 0.5%;
+    padding: 1%;
+    width: 98%;
+    height: 210px;
+    align-items: center;
     
 }
 .content{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0.5%;
 }
 .ContentVER1 img{
     content: blank;
     background-color: aliceblue;
     border: 1px black;
-    padding: 3px;
+    padding: 2px;
     text-align: center; 
-    width: 95%;
+    width: 100%;
     height: auto;
     aspect-ratio: 16/9;
 }
 .ContentVER1 h1{
     content: blank;
     background-color: aliceblue;
-    border: 1px black;
-    padding: 2px;
     text-align: center;
 }
 .ContentVER1 p{
     content: blank;
     background-color: aliceblue;
-    border: 1px black;
-    padding: 2px;
     text-align: center;
 }
 .ContentVER1 a{
